# troer

./: .gitignore  Makefile  README.md  install-depends.txt  pyproject.toml
defconfig/: dpack.defconfig  elog.defconfig  galv.defconfig  hed.defconfig  stroll.defconfig  utils.defconfig
doc/: sample.yml  troer.md
scripts/: afl.sh  gdb.sh  run.sh
src/troer/: elem.py  main.py  makefile.py  typescript.py
src/troer/resources/: conf.py  doxyfile  genindex.rst  gpl.rst  lgpl.rst  license.rst  mit.rst
src/troer/schemas/: __init__.py  exchange.yaml  storage.yaml  troer.yaml
src/troer/spec/: __init__.py  spec.py
src/troer/templates/: api.tmpl  bmap-json.c.tmpl  bmap.h.tmpl  defCustom.h.tmpl  defRef.h.tmpl  doc.tmpl  ebuild.tmpl  enum-json.c.tmpl  enum.c.tmpl  enum.h.tmpl  enum.tmpl  enumCheck-c.tmpl  enumCheck-h.tmpl  fbmap-json.c.tmpl  fbmap.h.tmpl  flags-json.c.tmpl  flags.c.tmpl  flags.h.tmpl  kconfig.tmpl  lib-header.tmpl  lib-json.c.tmpl  lib-src.tmpl  lib.c.tmpl  lib.h.tmpl  lvstr-json.c.tmpl  lvstr.c.tmpl  lvstr.h.tmpl  makefile.tmpl  readme.tmpl  repo-collection-json.c.tmpl  repo-collection.c.tmpl  repo-collection.h.tmpl  repo-json.c.tmpl  repo-object-json.c.tmpl  repo-object.c.tmpl  repo-object.h.tmpl  repo.c.tmpl  repo.h.tmpl  rpc-clt-json.c.tmpl  rpc-clt.c.tmpl  (+10 more)
tests/: clnt.c  exchange.c  lib.c  storage.c  test-clnt.yaml  test-exchange.yaml  test-lib.yaml  test-storage.yaml  test-typescript.yaml  typescript.c
